--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,26 @@
   font-style: normal;
   font-weight: 100 900;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d2d2d;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+  border: 3px solid #2d2d2d;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
+::-webkit-scrollbar-corner {
+  background: #2d2d2d;
+}
